# spacesos

./: .gitignore  pyproject.toml  readme.md
backend/: .env.sample  script.py  zappa_settings.json
backend/app/: admin.py  apps.py  enums.py  serializers.py
backend/app/ai/: marvin_ai_agent.py  vertex_ai_agent.py
backend/app/migrations/: 0001_initial.py
backend/app/models/: __init__.py  model_common_fields.py  model_tasks.py
backend/app/tests/: generator.py  test_reminders.py  test_tasks.py  test_users.py
backend/app/views/: view_reports.py  views_task.py  views_users.py
backend/backend/: settings.py  urls.py
backend/supabase/: config.toml
